# bacon

./: .editorconfig  .envrc-template  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Taskfile.yaml  docker-compose.override.yml  docker-compose.yml  server_shell.py
backend/: Dockerfile  bacon-api.http  http-client.private.env.json  logger.py  pyproject.toml
backend/providers/: base.py
backend/providers/perekrestok/: __main__.py  provider.py
backend/scrapers/: __init__.py  base.py
backend/scrapers/perekrestok/: __main__.py  client.py  config.py  models.py  scraper.py
backend/src/: config.py  deps.py  main.py  shell.py  telemetry.py  utils.py
backend/src/api/: routes.py  schemas.py  services.py
backend/src/auth/: __init__.py  backend.py  db.py  manager.py  routes.py  schemas.py  users.py
backend/src/perekrestok/: __main__.py  client.py  parser.py
backend/src/storage/: __init__.py  models.py  utils.py
backend/src/telegram/: client.py  deps.py  permissions.py  routes.py  schemas.py  validation.py
backend/src/tests/: test_validation.py
backend/src/watcher/: __init__.py  api.py  main.py  notifications.py  product_update.mako  schemas.py  services.py  signals.py  utils.py
backend/web/: __init__.py  celery.py  manage.py  sentry.py  settings.py  urls.py  wsgi.py
backend/web/api/: apps.py  filters.py  permissions.py  receivers.py  serializers.py  urls.py  views.py
backend/web/bacon/: __init__.py  asgi.py  logging.py  settings.py  urls.py  wsgi.py
backend/web/notifications/: admin.py  apps.py  models.py  receivers.py  serializers.py  telegram.py  urls.py  views.py
backend/web/notifications/migrations/: 0001_initial.py  0002_alter_telegramsubscription_user.py  0003_rename_telegram_id_telegramsubscription_chat_id.py
backend/web/products/: admin.py  apps.py  managers.py  models.py  receivers.py  tasks.py
backend/web/products/migrations/: 0001_initial.py  0002_initial.py  0002_rename_value_price_current_price_old.py  0003_add_perekrestok_retailer.py  0003_alter_price_old.py  0004_add_refresh_products_task.py  0004_remove_product_available_product_in_stock_and_more.py  0005_alter_product_store.py
backend/web/products/templates/: product_update.html
backend/web/products/templatetags/: notifications.py
backend/web/scraping/: admin.py  apps.py  models.py  utils.py
backend/web/scraping/migrations/: 0001_initial.py  0002_add_perekrestok_scraper.py  0002_scraper_config.py  0003_scraper_enabled.py  0004_alter_scraper_entrypoint.py
backend/web/users/: admin.py  apps.py  models.py
frontend/: .env.production  (+6 more)
server/: Dockerfile  Taskfile.yaml  deps.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  settings.py
server/api/: auth.py  routes.py  schemas.py
server/bot/: auth.py  deps.py  permissions.py  routes.py  schemas.py  validation.py
server/core/: clients.py  repositories.py  schemas.py  services.py
server/core/scraper/: __main__.py  parsers.py
server/core/storage/: __init__.py  alembic.ini  tables.py  utils.py
server/src/: config.py  dispatch.py  main.py  shell.py
server/src/auth/: __init__.py  routes.py
server/src/perekrestok/: __main__.py  client.py  parser.py
server/src/storage/: __init__.py  utils.py
server/src/telegram/: client.py  deps.py
server/src/tests/: test_validation.py
server/src/watcher/: api.py  main.py  notifications.py  services.py
server/tests/: test_validation.py
server/treats/: Dockerfile  auth.py  config.py  deps.py  main.py  notifications.py  pyproject.toml  shell.py  telemetry.py  watch.py  watcher.py
server/treats/api/: routes.py  schemas.py  services.py
server/treats/auth/: backend.py  db.py  manager.py  schemas.py
server/treats/perekrestok/: __main__.py  client.py  parser.py
server/treats/storage/: __init__.py  alembic.ini  models.py  utils.py
server/treats/telegram/: auth.py  client.py  deps.py  permissions.py  routes.py  schemas.py
server/treats/watcher/: __init__.py  __main__.py  api.py  notifications.py  product_update.mako  schemas.py  services.py  tasks.py  utils.py
(+144 files in other folders)
