[tool.poetry]
name = "bacon"
version = "0.1.0"
description = ""
authors = ["Roman Vlasenko <klavionik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["socks"], version = "^0.23.1"}
ptpython = "^3.0.20"
loguru = "^0.6.0"
huey = "^2.4.4"
setuptools = "^65.5.0"
pymitter = "^0.4.0"
redis = "^4.3.5"
django = "^4.2.2"
django-environ = "^0.10.0"
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"
logtail-python = "^0.1.3"
sentry-sdk = {extras = ["django"], version = "^1.10.1"}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
