[tool.poetry]
name = "bacon"
version = "0.1.0"
description = ""
authors = ["Roman Vlasenko <klavionik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["socks"], version = "^0.23.1"}
ptpython = "^3.0.20"
loguru = "^0.6.0"
setuptools = "^65.5.0"
redis = "^4.3.5"
django = "^4.2.2"
django-environ = "^0.10.0"
psycopg = "^3.1.9"
django-rest-framework = "^0.1.0"
djoser = "^2.2.0"
django-constance = "^2.9.1"
django-picklefield = "^3.1"
sentry-sdk = {extras = ["django"], version = "^1.10.1"}
django-cors-headers = "^4.1.0"
django-username-email = "^2.5.4"
dacite = "^1.8.1"

[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
