[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Roman Vlasenko <klavionik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
asyncpg = "^0.26.0"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
ptpython = "^3.0.20"
fastapi = "^0.82.0"
itsdangerous = "^2.1.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
auth0-python = "^3.23.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
