[tool.poetry]
name = "treats"
version = "0.1.0"
description = ""
authors = ["Roman Vlasenko <klavionik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
asyncpg = "^0.26.0"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
ptpython = "^3.0.20"
fastapi = "^0.82.0"
itsdangerous = "^2.1.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
loguru = "^0.6.0"
huey = "^2.4.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.0"}
setuptools = "^65.5.0"
pymitter = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"
logtail-python = "^0.1.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.10.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
